// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="textinput"
    style={
      Array [
        Object {},
        Object {
          "border": "1px solid yellow",
        },
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            Array [
              Object {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            flexWrap="wrap"
            gap="spacing.0"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "gap": 0,
                },
              ]
            }
          >
            <Text
              color="surface.text.subdued.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="bold"
              lineHeight={50}
              style={
                Array [
                  Object {
                    "color": "hsla(217, 18%, 45%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "700",
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                Array [
                  Object {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                color="surface.text.normal.lowContrast"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  Array [
                    Object {
                      "color": "hsla(217, 56%, 17%, 1)",
                      "fontFamily": "Lato",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        position="relative"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "position": "relative",
              "width": "100%",
            },
            Object {
              "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
              "borderBottomColor": "hsla(216, 15%, 54%, 0.18)",
              "borderBottomStyle": "solid",
              "borderBottomWidth": 1,
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
            },
          ]
        }
        width="100%"
      >
        <TextInput
          accessibilityDescribedBy=""
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityState={
            Object {
              "disabled": false,
              "expanded": undefined,
            }
          }
          autoCompleteType="off"
          data-blade-component="styled-base-input"
          editable={true}
          id="textinput-1-input-2"
          interactionElement={null}
          isFocused={false}
          isTextArea={false}
          keyboardType="default"
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="default"
          secureTextEntry={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "hsla(216, 27%, 36%, 1)",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "height": 36,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 8,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 8,
                "textAlignVertical": "top",
                "textDecorationLine": "none",
                "width": "100%",
              },
            ]
          }
          textContentType="none"
        />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "hsla(218, 89%, 51%, 1)",
                "bottom": 0,
                "height": 1,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
              },
              Object {
                "opacity": undefined,
                "width": "undefined%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        Array [
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with icon, prefix, suffix 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="textinput"
    style={
      Array [
        Object {},
        Object {
          "border": "1px solid yellow",
        },
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            Array [
              Object {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            flexWrap="wrap"
            gap="spacing.0"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "gap": 0,
                },
              ]
            }
          >
            <Text
              color="surface.text.subdued.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="bold"
              lineHeight={50}
              style={
                Array [
                  Object {
                    "color": "hsla(217, 18%, 45%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "700",
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter company website
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                Array [
                  Object {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                color="surface.text.normal.lowContrast"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  Array [
                    Object {
                      "color": "hsla(217, 56%, 17%, 1)",
                      "fontFamily": "Lato",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        position="relative"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "position": "relative",
              "width": "100%",
            },
            Object {
              "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
              "borderBottomColor": "hsla(216, 15%, 54%, 0.18)",
              "borderBottomStyle": "solid",
              "borderBottomWidth": 1,
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
            },
          ]
        }
        width="100%"
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            display="flex"
            style={
              Array [
                Object {
                  "display": "flex",
                  "paddingLeft": 12,
                },
              ]
            }
          >
            <RNSVGSvgView
              accessibilityElementsHidden={true}
              align="xMidYMid"
              bbHeight="16px"
              bbWidth="16px"
              data-blade-component="icon"
              fill="none"
              focusable={false}
              height="16px"
              importantForAccessibility="no-hide-descendants"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Array [
                    Object {},
                  ],
                  Object {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width="16px"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                  fill={4282603381}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                  fill={4282603381}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  clipRule={0}
                  d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                  fill={4282603381}
                  fillRule={0}
                  propList={
                    Array [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            data-blade-component="base-box"
            style={
              Array [
                Object {
                  "paddingLeft": 4,
                },
              ]
            }
          >
            <Text
              color="surface.text.subtle.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              https://
            </Text>
          </View>
        </View>
        <TextInput
          accessibilityDescribedBy=""
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityState={
            Object {
              "disabled": false,
              "expanded": undefined,
            }
          }
          autoCapitalize="none"
          autoCompleteType="off"
          data-blade-component="styled-base-input"
          editable={true}
          id="textinput-31-input-32"
          interactionElement={null}
          isFocused={false}
          isTextArea={false}
          keyboardType="url"
          leadingIcon={[Function]}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSubmitEditing={[Function]}
          placeholder="something"
          prefix="https://"
          returnKeyType="go"
          secureTextEntry={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "hsla(216, 27%, 36%, 1)",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "height": 36,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 8,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 8,
                "textAlignVertical": "top",
                "textDecorationLine": "none",
                "width": "100%",
              },
            ]
          }
          suffix=".com"
          textContentType="none"
        />
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              Array [
                Object {
                  "paddingRight": 12,
                },
              ]
            }
          >
            <Text
              color="surface.text.subtle.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              .com
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "hsla(218, 89%, 51%, 1)",
                "bottom": 0,
                "height": 1,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
              },
              Object {
                "opacity": undefined,
                "width": "undefined%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        Array [
          Object {
            "marginLeft": 0,
            "marginTop": -14,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
